<resources>
    <string name="app_name">TestEurosport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_contentdescription">This is the image of the story</string>
    <string name="sport_text">Sport</string>
    <string name="title_text">Title Example</string>
    <string name="author_date_text">By Author - 10 min ago</string>
    <string name="author_date_placeholder_text">By %1$s - %2$s</string>
    <string name="date_text">10 min ago</string>
    <string name="author_text">Author</string>
    <string name="by_text">By</string>
    <string name="story_text">Story text example</string>
    <string name="story_back_contentdescription">Use this button to go back to the list of stories and videos</string>
    <string name="share_story_contentdescription">Use this button to share the story</string>
    <string name="views_text">1000 views</string>
    <string name="featured_text">FEATURED</string>
    <string name="views_placeholder_text">%d views</string>
</resources>