<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/video_image"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:contentDescription="@string/image_contentdescription"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/sport_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_corner_shape"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:text="@string/sport_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/video_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_image" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sport_text" />

        <TextView
            android:id="@+id/views_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/views_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/play"
            android:contentDescription="@string/story_back_contentdescription"
            app:layout_constraintBottom_toBottomOf="@+id/video_image"
            app:layout_constraintEnd_toEndOf="@+id/video_image"
            app:layout_constraintStart_toStartOf="@+id/video_image"
            app:layout_constraintTop_toTopOf="@+id/video_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>